@startuml HOSPETSE-DER-MVP
' =========================================================
'  DER HOSPETSE — VERSAO MVP (Sprint 7 — UC03 + UC04)
'  Foco: buscar hoteis e solicitar reserva
' =========================================================
hide circle
skinparam linetype ortho
skinparam classFontStyle bold

entity "usuario" as usuario {
  * id : SERIAL <<PK>>
  --
  * email : VARCHAR <<UNIQUE>>
  * senha_hash : VARCHAR
  * tipo_conta : VARCHAR
  created_at : TIMESTAMP
}

entity "tutor" as tutor {
  * id : SERIAL <<PK>>
  --
  * usuario_id : INT <<FK>>
  * nome : VARCHAR
  telefone : VARCHAR
  cpf : VARCHAR
  data_nasc : DATE
}

entity "pet" as pet {
  * id : SERIAL <<PK>>
  --
  * tutor_id : INT <<FK>>
  * nome : VARCHAR
  especie : VARCHAR
  raca : VARCHAR
  porte : VARCHAR
  idade : INT
}

entity "prestador" as prestador {
  * id : SERIAL <<PK>>
  --
  * usuario_id : INT <<FK>>
  * tipo : VARCHAR
  * nome : VARCHAR
  localizacao : VARCHAR
  avaliacao : DECIMAL
  foto_url : VARCHAR
}

entity "hotel_detalhe" as hotel_detalhe {
  * prestador_id : INT <<PK,FK>>
  --
  cnpj : VARCHAR
  capacidade : INT
  aceita_porte : VARCHAR
}

entity "pet_sitter_detalhe" as pet_sitter_detalhe {
  * prestador_id : INT <<PK,FK>>
  --
  atende_em_casa : BOOLEAN
  raio_km : INT
}

entity "pet_walker_detalhe" as pet_walker_detalhe {
  * prestador_id : INT <<PK,FK>>
  --
  duracao_padrao_min : INT
}

entity "servico" as servico {
  * id : SERIAL <<PK>>
  --
  * prestador_id : INT <<FK>>
  * tipo_servico : VARCHAR
  * nome : VARCHAR
  * preco : DECIMAL
  * unidade : VARCHAR
  ativo : BOOLEAN
}

entity "reserva" as reserva {
  * id : SERIAL <<PK>>
  --
  * tutor_id : INT <<FK>>
  * pet_id : INT <<FK>>
  * servico_id : INT <<FK>>
  * data_inicio : DATE
  data_fim : DATE
  * status : VARCHAR
  valor_total : DECIMAL
  created_at : TIMESTAMP
}

entity "transacao" as transacao {
  * id : SERIAL <<PK>>
  --
  * reserva_id : INT <<FK>>
  * valor : DECIMAL
  metodo_pagamento : VARCHAR
  status : VARCHAR
  created_at : TIMESTAMP
}

' ===== Relacionamentos =====
usuario        ||--o| tutor             : "tem perfil"
usuario        ||--o| prestador         : "tem perfil"

tutor          ||--o{ pet               : "possui"
tutor          ||--o{ reserva           : "faz"
pet            ||--o{ reserva           : "e hospedado em"

prestador      ||--o| hotel_detalhe     : "e"
prestador      ||--o| pet_sitter_detalhe: "e"
prestador      ||--o| pet_walker_detalhe: "e"
prestador      ||--o{ servico           : "oferece"

servico        ||--o{ reserva           : "e contratado em"

reserva        ||--o{ transacao         : "gera"

@enduml
